// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ServiceListView Should render options after click 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main"
  >
    <span
      class="bp3-popover-wrapper bp3-dark"
    >
      <span
        class="bp3-popover-target bp3-popover-open"
      >
        <button
          class="bp3-button bp3-disabled bp3-loading bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <div
            class="bp3-spinner bp3-button-spinner"
          >
            <div
              class="bp3-spinner-animation"
            >
              <svg
                height="20"
                stroke-width="16.00"
                viewBox="-3.00 -3.00 106.00 106.00"
                width="20"
              >
                <path
                  class="bp3-spinner-track"
                  d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                />
                <path
                  class="bp3-spinner-head"
                  d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                  pathLength="280"
                  stroke-dasharray="280 280"
                  stroke-dashoffset="210"
                />
              </svg>
            </div>
          </div>
          <span
            class="bp3-icon StyledProps--main"
            data-icon="Options"
          >
            <svg
              fill="currentColor"
              height="16"
              viewBox="0 0 4 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="2"
                cy="2"
                r="1.5"
              />
              <circle
                cx="2"
                cy="8"
                r="1.5"
              />
              <circle
                cx="2"
                cy="14"
                r="1.5"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
  </div>
</div>
`;

exports[`ServiceListView render Service list 1`] = `
<div>
  Help Panel
  <div
    class="StyledProps--font StyledProps--main masonry"
    style="height: calc(100% - 66px); width: 100%;"
  >
    <div
      class="TableV2--table table"
    >
      <div
        class="TableV2--header"
        role="row"
      >
        <div
          class="TableV2--cell"
          colspan="1"
          role="columnheader"
          style="width: 60%;"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
          >
            SERVICE
          </p>
        </div>
        <div
          class="TableV2--cell"
          colspan="1"
          role="columnheader"
          style="width: 35%;"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
          >
            DESCRIPTION
          </p>
        </div>
        <div
          class="TableV2--cell"
          colspan="1"
          role="columnheader"
          style="width: 3%;"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
          >
            
          </p>
        </div>
      </div>
      <div
        class="TableV2--body"
      >
        <div
          class="TableV2--row TableV2--card TableV2--clickable"
          role="row"
        >
          <div
            class="TableV2--cells"
          >
            <div
              class="TableV2--cell"
              role="cell"
              style="width: 60%;"
            >
              <div
                class="serviceName"
              >
                <div
                  class="Layout--vertical StyledProps--main"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black"
                  >
                    dfg
                  </p>
                  <div
                    class="Layout--horizontal StyledProps--main StyledProps--flex"
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--margin-top-xsmall StyledProps--margin-right-medium StyledProps--color StyledProps--color-grey500"
                      style="font-size: 12px; line-height: 24px; word-break: break-word;"
                    >
                      Id: 
                      dfg
                    </p>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="TableV2--cell"
              role="cell"
              style="width: 35%;"
            >
              <div
                class="Layout--vertical StyledProps--main serviceDescriptionWrapper"
              >
                <div
                  class="serviceDescription"
                >
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main"
                    style="--text-line-clamp: 1;"
                  >
                    
                  </p>
                </div>
              </div>
            </div>
            <div
              class="TableV2--cell"
              role="cell"
              style="width: 3%;"
            >
              <div
                class="Layout--horizontal StyledProps--main"
              >
                <span
                  class="bp3-popover-wrapper bp3-dark"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                      type="button"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="Options"
                      >
                        <svg
                          fill="currentColor"
                          height="16"
                          viewBox="0 0 4 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <circle
                            cx="2"
                            cy="2"
                            r="1.5"
                          />
                          <circle
                            cx="2"
                            cy="8"
                            r="1.5"
                          />
                          <circle
                            cx="2"
                            cy="14"
                            r="1.5"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="StyledProps--font StyledProps--main pagination"
  />
</div>
`;
